--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
+    text-align: right;
+    padding-top: 5px;
 }
 
 nav ul li a{
